--- a/views/admin/addcategorias.handlebars
+++ b/views/admin/addcategorias.handlebars
@@ -1,7 +1,7 @@
 <h3>Nova categoria:</h3>
 <div class="card">
     <div class="card-body">
-    <form class="" action="/admin/nova/categoria" method="post">
+    <form class="" action="/admin/add-categoria" method="post">
         <label for="nome">Nome:</label>
             <input type="text" name="nome" id="nome" placeholder="nome da categoria" class="form-control">
         <label for="slug">Slug</label>
