add link add-categorias in admin page home

--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,6 +1,6 @@
 
 
-<button class="btn btn-sucess">teste</button>
+<a href="/admin/add-categoria"><button class="btn btn-success">teste</button></a>
 
 <div class="progress">
   <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
