--- a/views/admin/addcategorias.handlebars
+++ b/views/admin/addcategorias.handlebars
@@ -5,10 +5,10 @@
 
         <form class="" action="/admin/add-categoria" method="post">
 
-            <label for="nome">Nome:</label>
+            <label for="nome">Nome: </label>
                 <input type="text" name="nome" id="nome" placeholder="nome da categoria" class="form-control">
                 
-            <label for="slug">Slug</label>
+            <label for="slug">Slug: </label>
                 <input type="text" name="slug" id="slug" placeholder="slug da categoria" class="form-control">
             
             <br>
