--- a/views/admin/addcategorias.handlebars
+++ b/views/admin/addcategorias.handlebars
@@ -6,10 +6,10 @@
         <form class="" action="/admin/add-categoria" method="post">
 
             <label for="nome">Nome: </label>
-                <input type="text" name="nome" id="nome" placeholder="nome da categoria" class="form-control">
+                <input type="text" name="nome" id="nome" placeholder="nome da categoria" class="form-control" required>
                 
             <label for="slug">Slug: </label>
-                <input type="text" name="slug" id="slug" placeholder="slug da categoria" class="form-control">
+                <input type="text" name="slug" id="slug" placeholder="slug da categoria" class="form-control" required>
             
             <br>
 
