add middleware msgs system

--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,3 +1,4 @@
 <h2>Lista de categorias</h2>
 <hr>
-<a href="/admin/add-categorias"><button class="btn btn-success">Nova categorias</button></a>
+<a href="/admin/add-categoria"><button class="btn btn-success">Adicionar nova categoria</button></a>
+
