--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,3 +1,4 @@
 
 
+<a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a>
 <a href="/admin/add-categoria"><button class="btn btn-success">Adicionar nova categoria</button></a>
