--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,4 +1,16 @@
 <h2>Lista de categorias</h2>
 <hr>
-<a href="/admin/add-categoria"><button class="btn btn-success">Adicionar nova categoria</button></a>
+<a href="/admin/add-categoria"><button class="btn btn-success mb-4">Adicionar nova categoria</button></a>
+{{#each categorias}}
 
+    <div class="card">
+        <div class="card-body">
+            <p>{{nome}}</p>
+            <small>Slug: {{slug}}</small>
+        </div>
+    </div>
+    <br>
+
+{{else}}
+
+{{/each}}
