--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,4 +1,14 @@
 
+<div class="card">
+    <div class="card-body">
+        <a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a>
+        <a href="/admin/add-categoria"><button class="btn btn-success">Adicionar nova categoria</button></a>
+    </div>
+</div>
 
-<a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a>
-<a href="/admin/add-categoria"><button class="btn btn-success">Adicionar nova categoria</button></a>
+<div class="card mt-4">
+    <div class="card-body">
+        <a href="/admin/postagens"><button class="btn btn-success">Postagens</button></a>
+        <a href="/admin/add-postagens"><button class="btn btn-success">Adicionar nova postagem</button></a>
+    </div>
+</div>
