--- a/views/admin/addpostagens.handlebars
+++ b/views/admin/addpostagens.handlebars
@@ -6,23 +6,23 @@
         <form class="" action="/admin/add-postagens" method="post">
 
             <label for="titulo">titulo: </label>
-            <input type="text" name="titulo" id="titulo" placeholder="titulo da categoria" class="form-control">
+            <input type="text" name="titulo" id="titulo" placeholder="titulo da categoria" class="form-control" required>
                 
             <label for="slug">Slug: </label>
-            <input type="text" name="slug" id="slug" placeholder="slug da categoria" class="form-control">
+            <input type="text" name="slug" id="slug" placeholder="slug da categoria" class="form-control" required>
 
             <label for="slug">Descrição: </label>
-            <input type="text" name="descricao" id="descricao" placeholder="slug da categoria" class="form-control">
+            <input type="text" name="descricao" id="descricao" placeholder="slug da categoria" class="form-control" required>
 
             <label for="slug">Conteudo: </label>
-            <textarea name="conteudo" id="conteudo" placeholder="slug da categoria" class="form-control"></textarea>
+            <textarea name="conteudo" id="conteudo" placeholder="slug da categoria" class="form-control" required></textarea>
 
             <label for="slug">Selecione a categoria: </label>
-            <select name="categoria" id="categoria" class="form-control">
+            <select name="categoria" id="categoria" class="form-control" required>
                 {{#each categorias}}
                     <option value="{{id}}">{{nome}}</option>
                 {{else}}
-                    <option value="">nenhuma categoria registrada</option>
+                    <option value="0">nenhuma categoria registrada</option>
                 {{/each}}
             </select>
             
