ajust in feature make post

--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -7,6 +7,7 @@
         <div class="card-body">
             <p>{{nome}}</p>
             <small>Slug: {{slug}}</small>
+            <p>postagens: {{postagens}}</p>
             <br>
             <a href="/admin/edit-categoria/{{id}}"><button class="btn btn-success mt-2">Editar Categoria</button></a>
             <a href="/admin/delete-categoria/{{id}}"><button class="btn btn-danger mt-2">Deletar Categoria</button></a>
