--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -1,17 +1,18 @@
 <h2>Lista de postagens</h2>
 <hr>
-<a href="/admin/add-categoria"><button class="btn btn-success mb-4">Adicionar nova postagem</button></a>
-{{#each categorias}}
+<a href="/admin/add-postagens"><button class="btn btn-success mb-4">Adicionar nova postagem</button></a>
+{{#each postagens}}
 
     <div class="card">
         <div class="card-body">
-            <p>{{titulo}}</p>
+            <p>Titulo: {{titulo}}</p>
             <small>Slug: {{slug}}</small>
-            <p>{{descricao}}</p>
+            <p>Descrição: {{descricao}}</p>
             <p>{{conteudo}}</p>
+            <p>Categoria: {{categoriaId}}</p>
             <br>
-            <a href="/admin/edit-categoria/{{id}}"><button class="btn btn-success mt-2">Editar Categoria</button></a>
-            <a href="/admin/delete-categoria/{{id}}"><button class="btn btn-danger mt-2">Deletar Categoria</button></a>
+            <a href="/admin/edit-postagem/{{id}}"><button class="btn btn-success mt-2">Editar Postagem</button></a>
+            <a href="/admin/delete-postagem/{{id}}"><button class="btn btn-danger mt-2">Deletar Postagem</button></a>
         </div>
     </div>
     <br>
