--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -2,13 +2,13 @@
 <div class="card">
     <div class="card-body">
         <a href="/admin/categorias"><button class="btn btn-success">Categorias</button></a>
-        <a href="/admin/add-categoria"><button class="btn btn-success">Adicionar nova categoria</button></a>
+        <a href="/admin/add-categoria"><button class="btn btn-success">Adicionar nova categoria <i class="bi bi-plus-circle"></i></button></a>
     </div>
 </div>
 
 <div class="card mt-4">
     <div class="card-body">
         <a href="/admin/postagens"><button class="btn btn-success">Postagens</button></a>
-        <a href="/admin/add-postagens"><button class="btn btn-success">Adicionar nova postagem</button></a>
+        <a href="/admin/add-postagens"><button class="btn btn-success">Adicionar nova postagem <i class="bi bi-plus-circle"></i></button></a>
     </div>
 </div>
