--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -1,18 +1,19 @@
 <h2>Lista de postagens</h2>
 <hr>
-<a href="/admin/add-postagens"><button class="btn btn-success mb-4">Adicionar nova postagem</button></a>
+<a href="/admin/add-postagens"><button class="btn btn-success mb-4">Adicionar nova postagem <i class="bi bi-plus-circle"></i></button></a>
+
 {{#each postagens}}
 
     <div class="card">
         <div class="card-body">
             <p>Titulo: {{titulo}}</p>
-            <small>Slug: {{slug}}</small>
+            <small>Slug: {{slug}}</small>0
             <p>Descrição: {{descricao}}</p>
             <p>{{conteudo}}</p>
             <p>Categoria: {{categoriaId}}</p>
             <br>
-            <a href="/admin/edit-postagem/{{id}}"><button class="btn btn-success mt-2">Editar Postagem</button></a>
-            <a href="/admin/delete-postagem/{{id}}"><button class="btn btn-danger mt-2">Deletar Postagem</button></a>
+            <a href="/admin/edit-postagem/{{id}}"><button class="btn btn-success mt-2">Editar Postagem <i class="bi bi-pencil"></i></button></a>
+            <a href="/admin/delete-postagem/{{id}}"><button class="btn btn-danger mt-2">Deletar Postagem <i class="bi bi-trash"></i></button></a>
         </div>
     </div>
     <br>
