--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -9,7 +9,7 @@
             <p>Titulo: {{titulo}}</p>
             <small>Slug: {{slug}}</small>0
             <p>Descrição: {{descricao}}</p>
-            <p>{{conteudo}}</p>
+            <p>Conteúdo: {{conteudo}}</p>
             <p>Categoria: {{categoriaId}}</p>
             <br>
             <a href="/admin/edit-postagem/{{id}}"><button class="btn btn-success mt-2">Editar Postagem <i class="bi bi-pencil"></i></button></a>
