--- a/views/blog/index.handlebars
+++ b/views/blog/index.handlebars
@@ -9,7 +9,7 @@
             <p>Titulo: {{titulo}}</p>
             <small>Slug: {{slug}}</small>
             <p>Descrição: {{descricao}}</p>
-            <p>{{conteudo}}</p>
+            <p>Conteúdo: {{conteudo}}</p>
             <p>Categoria: {{categoriaId}}</p>
             <br>
             <a href=""><button class="btn btn-success mt-2">Salvar Postagem <i class="bi bi-bookmark-plus"></i></button></a>
