render name categoria

--- a/views/blog/index.handlebars
+++ b/views/blog/index.handlebars
@@ -10,7 +10,7 @@
             <small>Slug: {{slug}}</small>
             <p>Descrição: {{descricao}}</p>
             <p>Conteúdo: {{conteudo}}</p>
-            <p>Categoria: {{categoriaId}}</p>
+            <p>Categoria: {{categoria.nome}}</p>
             <br>
             <a href=""><button class="btn btn-success mt-2">Salvar Postagem <i class="bi bi-bookmark-plus"></i></button></a>
             <a href=""><button class="btn btn-primary mt-2">Curtir Postagem <i class="bi bi-bookmark-plus"></i></button></a>
