--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -7,10 +7,10 @@
     <div class="card">
         <div class="card-body">
             <p>Titulo: {{titulo}}</p>
-            <small>Slug: {{slug}}</small>0
+            <small>Slug: {{slug}}</small>
             <p>Descrição: {{descricao}}</p>
             <p>Conteúdo: {{conteudo}}</p>
-            <p>Categoria: {{categoriaId}}</p>
+            <p>Categoria: {{categoria.nome}}</p>
             <br>
             <a href="/admin/edit-postagem/{{id}}"><button class="btn btn-success mt-2">Editar Postagem <i class="bi bi-pencil"></i></button></a>
             <a href="/admin/delete-postagem/{{id}}"><button class="btn btn-danger mt-2">Deletar Postagem <i class="bi bi-trash"></i></button></a>
