--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -5,9 +5,8 @@
 
     <div class="card">
         <div class="card-body">
-            <p>{{nome}}</p>
+            <p>Nome: {{nome}}</p>
             <small>Slug: {{slug}}</small>
-            <p>postagens: {{postagens}}</p>
             <br>
             <a href="/admin/edit-categoria/{{id}}"><button class="btn btn-success mt-2">Editar Categoria <i class="bi bi-pencil"></i></button></a>
             <a href="/admin/delete-categoria/{{id}}"><button class="btn btn-danger mt-2">Deletar Categoria <i class="bi bi-trash"></i></button></a>
