--- a/views/blog/index.handlebars
+++ b/views/blog/index.handlebars
@@ -1,6 +1,10 @@
-<h1>Bem-Vindo(a)</h1>
-<h2>Postagens</h2>
+<h1>Bem vindo(a)</h1>
+<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Pesquise pelo título, categoria ou descrição de um post" aria-label="Recipient's username" aria-describedby="button-addon2">
+  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+</div>
 <hr>
+<h2>Postagens</h2>
 
 {{#each postagens}}
 
