--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,5 +1,9 @@
-<h2>Lista de categorias</h2>
+<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Pesquise pelo título, categoria ou descrição de um post" aria-label="Recipient's username" aria-describedby="button-addon2">
+  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+</div>
 <hr>
+<h2>Lista de categorias</h2>
 <a href="/admin/add-categoria"><button class="btn btn-success mb-4">Adicionar nova categoria <i class="bi bi-plus-circle"></i></button></a>
 {{#each categorias}}
 
