create button front end login and cadaster

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -12,6 +12,11 @@
         <li class="nav-item">
           <a class="nav-link" href="/admin">Painel Admin</a>
         </li>
+        <div class="gap-4">
+          <a href="/"><button class="btn btn-success mt-2">Login <i class="bi bi-person-circle"></i></button></a>
+          <a href="/"><button class="btn btn-primary mt-2">Cadastre-se <i class="bi bi-person-circle"></i></button></a>
+        </div>
+
         {{!-- <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li> --}}
