--- a/views/blog/index.handlebars
+++ b/views/blog/index.handlebars
@@ -17,7 +17,7 @@
             <p>Categoria: {{categoria.nome}}</p>
             <br>
             <a href=""><button class="btn btn-success mt-2">Salvar Postagem <i class="bi bi-bookmark-plus"></i></button></a>
-            <a href=""><button class="btn btn-primary mt-2">Curtir Postagem <i class="bi bi-bookmark-plus"></i></button></a>
+            <a href=""><button class="btn btn-primary mt-2">Curtir Postagem <i class="bi bi-suit-heart"></i></button></a>
         </div>
     </div>
     <br>
