--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -7,7 +7,7 @@
     <div class="card">
         <div class="card-body">
             <p>Titulo: {{titulo}}</p>
-            <small>Slug: {{slug}}</small>0
+            <small>Slug: {{slug}}</small>
             <p>Descrição: {{descricao}}</p>
             <p>{{conteudo}}</p>
             <p>Categoria: {{categoriaId}}</p>
