--- a/views/blog/index.handlebars
+++ b/views/blog/index.handlebars
@@ -1,7 +1,11 @@
 <h1>Bem vindo(a)</h1>
-<div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Pesquise pelo título, categoria ou descrição de um post" aria-label="Recipient's username" aria-describedby="button-addon2">
-  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+<div class="input-group mb-3 d-flex flex-row bd-highlight mb-3">
+    <form action="/admin/buscar-postagem/" class="form-control" method="POST">
+
+        <input type="text" name="palavra" id="palavra" class="form-control" placeholder="Pesquise pelo título, categoria ou descrição de um post" aria-label="Recipient's username" aria-describedby="button-addon2" required>
+        <button class="btn btn-outline-secondary" id="button-addon2">Buscar</button>
+
+    </form>
 </div>
 <hr>
 <h2>Postagens</h2>
