--- a/views/admin/postagens.handlebars
+++ b/views/admin/postagens.handlebars
@@ -1,6 +1,10 @@
-<div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Pesquise pelo título, categoria ou descrição de um post" aria-label="Recipient's username" aria-describedby="button-addon2">
-  <button class="btn btn-outline-secondary" type="button" id="button-addon2">Buscar</button>
+<div>
+    <form action="/admin/buscar-postagem/" class=" input-group mb-3 d-flex flex-row bd-highlight mb-3" method="POST">
+
+        <input type="text" name="palavra" id="palavra" class="form-control" placeholder="Pesquise pelo título, categoria ou descrição de um post" aria-label="Recipient's username" aria-describedby="button-addon2" required>
+        <button class="btn btn-outline-secondary" id="button-addon2">Buscar</button>
+
+    </form>
 </div>
 <a href="/admin/add-postagens"><button class="btn btn-success mb-4">Adicionar nova postagem <i class="bi bi-plus-circle"></i></button></a>
 <hr>
