--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -10,6 +10,9 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Categorias</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/admin">Painel Admin</a>
         </li>
         <div class="gap-4">
