--- a/views/users/register.handlebars
+++ b/views/users/register.handlebars
@@ -7,13 +7,16 @@
         <form action="/users/register" method="POST">
 
             <label for="user">Usuario</label>
-            <input type="text" name="user" id="user" placeholder="Digite seu usuario" class="form-control">
+            <input type="text" name="user" id="user" placeholder="Digite seu usuario" class="form-control" required>
 
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Digite seu email" class="form-control">
+            <input type="email" name="email" id="email" placeholder="Digite seu email" class="form-control" required>
 
             <label for="password">Senha</label>
-            <input type="password" name="password_user" id="password_user" placeholder="Digite sua senha" class="form-control">
+            <input type="password" name="password_user" id="password_user" placeholder="Digite sua senha" class="form-control" required>
+
+            <label for="password">Confirme sua senha</label>
+            <input type="password" name="password_user_repeat" id="password_user_repeat" placeholder="Digite sua senha" class="form-control" required>
 
             <br>
             <button class="btn btn-success">Complete Registration</button>
