alter authenticate user route

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -13,7 +13,7 @@
           <a class="nav-link active" aria-current="page" href="/categorias/">Categorias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin">Painel Admin</a>
+          <a class="nav-link" href="/admin">Painel Admin - {{user}}</a>
         </li>
         <div class="gap-4">
           <a href="/users/login"><button class="btn btn-success mt-2">Login <i class="bi bi-person-circle"></i></button></a>
