--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -17,7 +17,7 @@
             <br>
 
             <div class="gap-4">
-                <a href="/users/register"><button class="btn btn-primary mt-2">Cadastre-se <i class="bi bi-person-circle"></i></button></a>
+                <a href="/users/register"><button type="button" class="btn btn-primary mt-2">Cadastre-se <i class="bi bi-person-circle"></i></button></a>
             </div>
 
         </form>
