add USER variable global

--- a/views/blog/index.handlebars
+++ b/views/blog/index.handlebars
@@ -1,4 +1,4 @@
-<h1>Bem vindo(a)</h1>
+<h1>Bem vindo(a) {{user.nome}}</h1>
 <div>
     <form action="/admin/buscar-postagem/" class=" input-group mb-3 d-flex flex-row bd-highlight mb-3" method="POST">
 
