--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -12,13 +12,22 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/categorias/">Categorias</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin">Painel Admin - {{user}}</a>
-        </li>
-        <div class="gap-4">
-          <a href="/users/login"><button class="btn btn-success mt-2">Login <i class="bi bi-person-circle"></i></button></a>
-          <a href="/users/register"><button class="btn btn-primary mt-2">Cadastre-se <i class="bi bi-person-circle"></i></button></a>
-        </div>
+        {{#if user.flag_admin}}
+          <li class="nav-item">
+            <a class="nav-link" href="/admin">Painel Admin - {{user.nome}}</a>
+          </li>
+        {{else}}
+
+        {{/if}}
+
+        {{#if user}}
+
+        {{else}}
+          <div class="gap-4">
+            <a href="/users/login"><button class="btn btn-success mt-2">Login <i class="bi bi-person-circle"></i></button></a>
+            <a href="/users/register"><button class="btn btn-primary mt-2">Cadastre-se <i class="bi bi-person-circle"></i></button></a>
+          </div>
+        {{/if}}
 
         {{!-- <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
