--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -22,10 +22,13 @@
 
         {{#if user}}
 
+          <a href="/users/logout" class="btn btn-danger">Logout <i class="bi bi-person-circle"></i></a>
+
+
         {{else}}
           <div class="gap-4">
-            <a href="/users/login"><button class="btn btn-success mt-2">Login <i class="bi bi-person-circle"></i></button></a>
-            <a href="/users/register"><button class="btn btn-primary mt-2">Cadastre-se <i class="bi bi-person-circle"></i></button></a>
+            <a href="/users/login" class="btn btn-success mt-2">Login <i class="bi bi-person-circle"></i></a>
+            <a href="/users/register" class="btn btn-primary mt-2">Cadastre-se <i class="bi bi-person-circle"></i></a>
           </div>
         {{/if}}
 
